Java 11 compatibility: replace javax.xml.bind.DatatypeConverter with java.util.Base64